--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
